# quant-platform

./: .env.example  .gitignore  KRONOS_WEIGHTS_GUIDE.md  README.md  UI_OPTIMIZATION_REPORT.md  _completion_assessment.md  _eval_final_report.txt  _eval_monitor.sh  _kronos_eval_ckpt_darts_e15_s0.json  _kronos_eval_ckpt_darts_e6_s2.json  _kronos_eval_ckpt_kronos_e15_s0.json  _kronos_eval_ckpt_kronos_e1_s0.json  _kronos_eval_ckpt_qlib_e15_s0.json  _kronos_eval_ckpt_qlib_e1_s0.json  _kronos_eval_report.md  _kronos_predictions.csv  _kronos_predictions.md  _run_real.py  _today_prediction.focused.md  _today_prediction.md  bootstrap_kronos.sh  deploy_windows.bat  download_kronos_weights.py  fetch_kronos_weights.py  install-web.bat  pyproject.toml  requirements.txt  run_daily.bat  verify_README.md  verify_report.md  verify_verdict.json
api/: database.py  main.py  middleware.py  run_store.py  schemas.py  serializers.py  utils.py
backtest/: bt_backtest.py  cost_model.py  engine.py  qlib_backtest.py  report.py  sentiment_timing.py  signal_backtest.py  walk_forward.py
common/: __init__.py  alert_monitor.py  config.py  notify.py  stats.py
config/: factors.yaml  sectors.yaml  settings.yaml
docs/: daily_report_2026-07-11.md  daily_report_2026-07-14.md  leakage_audit_report.md  llm_audit_and_hotspot_design.md  p1_1_prediction_source_audit.md  sentiment_framework_prd.md  system_optimization_v1.md
evaluation/: data_quality.py  health_check.py
factors/: czsc_signals.py  darts_adapter.py  factor_calc.py  kronos_adapter.py  market_sentiment.py  prediction.py  qlib_factors.py  qlib_predict_adapter.py  risk_neutral.py  (+2 more)
(+94 files in other folders)
