[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-platform"
version = "0.1.0"
description = "A 股日频量化分析平台（analysis-first，只分析不交易）"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "量化平台工程团队" }]

dependencies = [
    # 存储
    "duckdb>=0.10,<2",
    # 科学计算（⚠️ pandas 锁 <3.0 以规避 ArrowInvalid，但代码兼容 3.0）
    "pandas>=2.0,<3.1",
    "numpy>=1.24",
    "scipy>=1.10",
    # 中性化 / 统计
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    # 后端 / API
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2",
    "pyyaml>=6",
    # LLM（DeepSeek V3，OpenAI 兼容）
    "openai>=1.0",
    "tenacity>=8.0",
    # 调度
    "apscheduler>=3.10",
    # 工程化
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# 重型 / 可选依赖：沙箱默认不装，模块内全部懒加载降级
ml = [
    "torch>=2.0",
    "darts>=0.27",
    "kronos>=0.1",          # 微软时间序列基础模型（走 HuggingFace 权重）
    "huggingface_hub>=0.23",
    "transformers>=4.40",
]
factors = [
    "qlib>=0.9",
    "czsc>=0.9",            # 缠论信号（需 Python>=3.10）
]
backtest = [
    "backtrader>=1.9",
    "quantstats>=0.0.62",
    "alphalens-reloaded>=0.4",   # alphalens 现代维护版优先；老 alphalens 仅作兜底
    "alphalens>=0.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
packages = ["storage", "sources", "factors", "evaluation", "fusion", "backtest", "llm", "scheduler", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
